feat: added medication in painRecord.