@@ -9,7 +9,6 @@ import org.springframework.context.annotation.Import;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.UUID;
 
 import m.siverio.paincalendar.painrecord.domain.model.PainRecord;
@@ -28,6 +27,9 @@ class PainRecordJpaAdapterTest {
     @Autowired
     private PainRecordJpaAdapter adapter;
 
+    @Autowired
+    private m.siverio.paincalendar.painrecord.infrastructure.persistence.repository.PainRecordJpaRepository jpaRepository;
+
     @Test
     void shouldSaveAndRetrievePainRecord() {
         PainRecord record = new PainRecord(
@@ -37,11 +39,18 @@ class PainRecordJpaAdapterTest {
                 Slot.MORNING,
                 5,
                 "Pain note",
-                Collections.emptyList());
+                java.util.List.of(new m.siverio.paincalendar.painrecord.domain.model.MedicationIntake(
+                        UUID.randomUUID(), java.math.BigDecimal.TEN, "Ibuprofeno")));
 
         PainRecord saved = adapter.save(record);
 
         assertThat(saved).isNotNull();
         assertThat(saved.getId()).isEqualTo(record.getId());
+
+        // Verify simple internal persistence
+        var entity = jpaRepository.findById(java.util.Objects.requireNonNull(record.getId().getId()));
+        assertThat(entity).isPresent();
+        assertThat(entity.get().getMedications()).hasSize(1);
+        assertThat(entity.get().getMedications().get(0).getMedicationName()).isEqualTo("Ibuprofeno");
     }
 }
